# pixsize

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api.md  usage.md
examples/basic/: rules.yaml
src/pixsize/: __init__.py  cli.py  core.py
tests/: conftest.py  test_cli.py  test_core.py
